bebytes/tests/compile_time/unsupported_f64.stderr
error: Unsupported type for U8 attribute
  --> tests/compile_time/unsupported_f64.rs:14:13
   |
14 |     second: f64,
   |             ^^^

error[E0369]: no implementation for `f64 << usize`
 --> tests/compile_time/unsupported_f64.rs:9:10
  |
9 | #[derive(BeBytes, Debug, PartialEq)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `BeBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0369]: no implementation for `f64 & f64`
  --> tests/compile_time/unsupported_f64.rs:9:10
   |
9  | #[derive(BeBytes, Debug, PartialEq)]
   |          ^^^^^^^ f64
...
14 |     second: f64,
   |     ------ f64
   |
   = note: this error originates in the derive macro `BeBytes` (in Nightly builds, run with -Z macro-backtrace for more info)
